force-app/main/default/objects/Competency__c/Competency__c.object-meta.xml
<CustomObject>
    <description>Junction object storing skill competency information for a contact.</description>
    <label>Competency</label>
    <nameField>
        <displayFormat>TCR-COM-{0000}</displayFormat>
        <label>Competency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competency</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>