force-app/main/default/objects/Competency__c/fields/Duplicate_Skill__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Skill__c</fullName>
    <label>Duplicate Skill</label>
    <length>50</length>
    <type>Text</type>
</CustomField>