force-app/main/default/objects/Competency__c/fields/Is_RecordOwner__c.field-meta.xml
<CustomField>
    <fullName>Is_RecordOwner__c</fullName>
    <formula>L_TC_Contact__r.I_RS_Related_User__r.Id = $User.Id</formula>
    <label>Is RecordOwner</label>
    <type>Checkbox</type>
</CustomField>