force-app/main/default/objects/Competency__c/fields/L_TC_Attendee__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Attendee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendee</label>
    <type>Checkbox</type>
</CustomField>