force-app/main/default/objects/Competency__c/fields/L_TC_Contact__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Contact__c</fullName>
    <description>Competencies would be displayed under contact record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Competencies</relationshipLabel>
    <relationshipName>Competencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>