force-app/main/default/objects/Competency__c/fields/L_TC_Current_Competency_Level__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Current_Competency_Level__c</fullName>
    <label>Current Competency Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Competent - untrained</fullName>
            </value>
            <value>
                <fullName>Not Yet Competent –undertaking training and/or assessment</fullName>
            </value>
            <value>
                <fullName>Competent – Training and Assessment complete or RPL granted</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>