force-app/main/default/objects/Competency__c/fields/L_TC_Date_Deemed_Competent__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Date_Deemed_Competent__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of last competency assessment</label>
    <type>Date</type>
</CustomField>