force-app/main/default/objects/Competency__c/fields/L_TC_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Renewal_Date__c</fullName>
    <defaultValue>TODAY() + (365*3 )</defaultValue>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>