force-app/main/default/objects/Competency__c/fields/L_TC_Skill__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Skill__c</fullName>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipName>Skill_Competencies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>