force-app/main/default/objects/Competency__c/fields/L_TC_Training__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Competencies</relationshipLabel>
    <relationshipName>Competencies</relationshipName>
    <type>Lookup</type>
</CustomField>