force-app/main/default/objects/Competency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Contact__c</columns>
    <columns>L_TC_Skill__c</columns>
    <columns>L_TC_Current_Competency_Level__c</columns>
    <columns>L_TC_Date_Deemed_Competent__c</columns>
    <columns>L_TC_Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>List of Contacts and Competency Levels</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>