force-app/main/default/objects/Competency__c/listViews/My_Competencies.listView-meta.xml
<ListView>
    <fullName>My_Competencies</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Skill__c</columns>
    <columns>L_TC_Current_Competency_Level__c</columns>
    <columns>L_TC_Date_Deemed_Competent__c</columns>
    <columns>L_TC_Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_RecordOwner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Competencies</label>
    <sharedTo></sharedTo>
</ListView>